# house-lights

./: .gitignore  README.md  dev.sh  docker-compose.yml  publish.sh
.claude/: launch.json
.github/workflows/: deploy.yml
backend/: .env.example  enrich_descriptions.py  enrich_embeddings.py  enrich_images.py  enrich_summaries.py  enrich_venues.py  fix_venue_images.py  pyproject.toml  run_scrapers.py  seed_venues.py
backend/.claude/: launch.json
backend/app/: db.py  main.py  venue_matcher.py
backend/app/api/: calendar.py  publish.py  recommendations.py  shows.py  venues.py  watchlist.py
backend/app/models/: core.py
backend/app/scrapers/: afaslive.py  badhuistheater.py  base.py  bimhuis.py  birdbraintheatre.py  boomchicago.py  bostheater.py  carre.py  cauldron.py  cinetol.py  concertgebouw.py  concertgebouw_full.py  delamar.py  downstageleft.py  englishtheatrenetherlands.py  felixmeritis.py  frascati.py  hea.py  inplayers.py  ita.py  meervaart.py  melkweg.py  muziekgebouw.py  operaballet.py  ot301.py  otc.py  paradiso.py  shelter.py  ticketmaster.py  ziggodome.py
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/.claude/: launch.json
frontend/public/data/: companies.json  shows.json  venues.json  watchlist.ics  watchlist.json
frontend/scripts/: strip-shows.mjs
frontend/src/components/: CalendarBody.tsx  DiscoverFeed.tsx  EditorUnlock.tsx  EventTypeIcon.tsx  ExpandableText.tsx  Nav.tsx  ShowCard.tsx  ShowFeed.tsx  ThemeToggle.tsx  VenueList.tsx  WatchMenu.tsx  WatchlistFeed.tsx
frontend/src/lib/: api.ts  (+2 more)
scripts/: dump_to_json.py
(+8 files in other folders)
